tests/machine/x/pascal/membership.error
line: 18
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/membership.pas
membership.pas(15,14) Error: Operator is not overloaded
membership.pas(16,14) Error: Operator is not overloaded
membership.pas(18) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

